# tinyurl-rs

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: api.rs  lib.rs  main.rs  types.rs
