[package]
name = "tinyurl-rs"
version = "0.1.1"
description = "Crate to simplify using tinyurl.com to shorten long urls in async rust."
edition = "2021"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.1"
